--- a/index.html
+++ b/index.html
@@ -56,6 +56,22 @@
                 </td>
             </tr>
         </table>
+        <table id="resultTable">
+            <tr>
+
+
+            <td><label>Line</label>
+            </td>
+            <td><label>Type</label>
+            </td>
+            <td><label>Name</label>
+            </td>
+            <td><label>Condition</label>
+            </td>
+            <td><label>Value</label>
+            </td>
+            </tr>
+        </table>
 
         <script src="dist/bundle.js"></script>
     </body>
