works include html and testing coverage 100 and branching 94.74

--- a/index.html
+++ b/index.html
@@ -57,9 +57,8 @@
             </tr>
         </table>
         <table id="resultTable">
+            <thead>
             <tr>
-
-
             <td><label>Line</label>
             </td>
             <td><label>Type</label>
@@ -71,6 +70,10 @@
             <td><label>Value</label>
             </td>
             </tr>
+            </thead>
+            <tbody id="bodyTable">
+
+            </tbody>
         </table>
 
         <script src="dist/bundle.js"></script>
