--- a/index.html
+++ b/index.html
@@ -13,11 +13,20 @@
                 width: 100%;
                 height: 80vh;
             }
-
+            .green{
+            background-color: #26f240;
+            }
+            .red{
+            background-color: #ff1715;
+            }
+            .func{
+            white-space: pre;
+            }
             textarea {
                 width: 80%;
                 height: 95%;
             }
+
         </style>
     </head>
     <body>
