--- a/index.html
+++ b/index.html
@@ -48,10 +48,13 @@
                     <div class="textAreaWrapper">
                         <textarea id="codePlaceholder" title="Enter code here"></textarea>
                     </div>
+                    <div class="textAreaWrapper" style="height: 50px">
+                        <textarea id="varsPlaceholder" placeholder="Enter function arguments"></textarea>
+                    </div>
                 </td>
                 <td>
-                    <div class="textAreaWrapper">
-                        <textarea id="parsedCode" title="Parse code"></textarea>
+                    <div class="textAreaWrapper" style=" text-align:initial">
+                        <div id="subsFunc" title="Output code" class="func"></div>
                     </div>
                 </td>
             </tr>
