removed blank lines

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         <textarea id="codePlaceholder" title="Enter code here"></textarea>
                     </div>
                     <div class="textAreaWrapper" style="height: 50px">
-                        <textarea id="varsPlaceholder" placeholder="Enter function arguments"></textarea>
+                        <textarea id="argsPlaceholder" placeholder="Enter function arguments"></textarea>
                     </div>
                 </td>
                 <td>
