finished - statements: 100%  branches: 97.42%

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
                 height: 80vh;
             }
             .green{
-            background-color: #26f240;
+            background-color: rgba(20, 242, 95, 0.74);
             }
             .red{
-            background-color: #ff1715;
+            background-color: rgba(255, 76, 81, 0.69);
             }
             .func{
             white-space: pre;
